--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SuccessfulLogin">
+        <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".NewCustomer">
         </activity>
     </application>
 
