--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         </activity>
         <activity android:name=".NewCustomer">
         </activity>
+        <activity android:name=".CustomerList">
+        </activity>
+        <activity android:name=".SessionList">
+        </activity>
     </application>
 
 </manifest>
