--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:support-v4:24.2.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
 }
